# InsightSwarm

./: .gitignore  pyproject.toml
docs/: create_table.md
libs/agents/: pyproject.toml
libs/oslm-crawler/: pyproject.toml
libs/oslm-crawler/config/: dataset-info.json  default_task.yaml  fix0907ms.yaml  model-info.json  org-links.json  process.yaml  ranking-key.json
libs/oslm-crawler/data/: other-source-datasets.jsonl
libs/oslm-crawler/data/2024-12-13/: data-rank.csv  data-summary.csv  merged-datasets-info.jsonl  model-rank.csv  model-summary.csv  overall-rank.csv
libs/oslm-crawler/data/2025-01-14/: data-rank.csv  data-summary-delta.csv  data-summary.csv  merged-datasets-info.jsonl  model-rank.csv  model-summary-delta.csv  model-summary.csv
libs/oslm-crawler/data/2025-02-14/: data-rank.csv  data-summary-delta.csv  data-summary.csv  merged-datasets-info.jsonl  model-rank.csv  model-summary-delta.csv  model-summary.csv  other-source-datasets.jsonl
libs/oslm-crawler/data/2025-03-07/: data-rank.csv  data-summary-delta.csv  data-summary.csv  merged-datasets-info.jsonl  model-rank.csv  model-summary-delta.csv  model-summary.csv  overall-rank.csv
libs/oslm-crawler/data/2025-04-07/: data-rank.csv  data-summary-delta.csv  data-summary.csv  merged-datasets-info.jsonl  model-rank.csv  model-summary-delta.csv  model-summary.csv  other-source-datasets.jsonl  (+1 more)
libs/oslm-crawler/pages/: 1_Ranking.py  1_📝_Ranking.py  2_Data.py  2_🗂️_Data.py  3_Model.py  3_🤖_Model.py  4_Infra.py  4_🖥️_Infra.py  5_Eval.py  5_✅_Eval.py
libs/oslm-crawler/scripts/: check_zero_downloads.py  drop_key_jsonl.py  init_model_info.py  migrate_old_data.py  modify_screenshot_path.py
scripts/: calc_code_size.py  create_oslm_db.py  init_oslm_db_from_json.py  process_all.sh
scripts/agentic/: check_img.py  gen_modality_v1.py  test_model_web.py
src/insightswarm/: cli.py
src/insightswarm/database/: oslm_record.py  oslm_sqlite.py
src/insightswarm/mcp_server/: oslm_db_mcp.py
(+175 files in other folders)
